--- a/index.html
+++ b/index.html
@@ -6,46 +6,90 @@
 <title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
 <meta name="description" content="Maycon Barboza — atendimento clínico desde 2016. Formação em psicanálise clínica.">
 <style>
-/* Paleta e tipografia: estilo B - psicanálise clássica elegante */
+/* =========================
+Paleta e tipografia (estilo B)
+========================= */
 :root{
 --bg:#f6f2ec; /* creme claro */
---card:#fff;
---warm:#6b3a3a; /* marrom acastanhado para títulos */
---muted:#6a6058; /* texto secundário */
---accent:#9b6f5a; /* acento quente */
+--card:#ffffff;
+--warm:#6b3a3a; /* marrom acastanhado */
+--muted:#6a6058;
+--accent:#9b6f5a;
 --radius:12px;
 --maxw:1100px;
 --serif: "Georgia", "Times New Roman", serif;
 }
 *{box-sizing:border-box}
-body{margin:0;background:var(--bg);color:#222;font-family:var(--serif);-webkit-font-smoothing:antialiased}
-.wrap{max-width:var(--maxw);margin:28px auto;padding:20px}
-.card{background:var(--card);border-radius:calc(var(--radius));padding:28px;box-shadow:0 10px 30px rgba(0,0,0,0.06)}
+html { font-size:18px; } /* AUMENTEI A BASE DA LETRA */
+body{margin:0;background:var(--bg);color:#222;font-family:var(--serif);-webkit-font-smoothing:antialiased;line-height:1.6}
+.wrap{max-width:var(--maxw);margin:22px auto;padding:18px}
+.card{background:var(--card);border-radius:calc(var(--radius));padding:26px;box-shadow:0 10px 30px rgba(0,0,0,0.06)}
 /* HERO: grid 2 col (texto|imagem) */
-.hero{display:grid;grid-template-columns:1fr 1fr;gap:24px;align-items:center}
-.hero h1{margin:0;font-size:34px;color:var(--warm);letter-spacing:0.2px}
-.hero .lead{margin-top:10px;color:var(--muted);font-size:15px;line-height:1.6}
-.hero .meta{margin-top:14px;color:var(--muted);font-size:14px}
+.hero{display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center}
+.hero h1{margin:0;font-size:2.0rem;color:var(--warm);letter-spacing:0.2px}
+.hero .lead{margin-top:10px;color:var(--muted);font-size:1rem}
+.hero .meta{margin-top:12px;color:var(--muted);font-size:0.95rem}
 .hero .badges{margin-top:14px}
-.badge{display:inline-block;padding:8px 12px;border-radius:999px;background:#f8f7f5;border:1px solid rgba(0,0,0,0.03);color:var(--warm);font-weight:600;margin-right:8px;font-size:13px}
-.hero-photo{width:100%;height:60vh;max-height:640px;border-radius:12px;object-fit:cover;box-shadow:0 12px 30px rgba(0,0,0,0.08)}
+.badge{display:inline-block;padding:8px 12px;border-radius:999px;background:#f8f7f5;border:1px solid rgba(0,0,0,0.03);color:var(--warm);font-weight:600;margin-right:8px;font-size:0.95rem}
+/* IMAGE STYLES — designed to avoid cutting heads */
+.hero-photo{
+width:100%;
+height:62vh; /* generous hero height so head is visible */
+max-height:640px;
+border-radius:12px;
+object-fit:cover; /* fills box */
+object-position:center top; /* keep top of image visible (head) */
+box-shadow:0 12px 30px rgba(0,0,0,0.08);
+}
 /* Sections */
-.section{margin-top:28px}
-h2{color:var(--warm);margin:0 0 8px;font-size:20px}
-p.muted{color:var(--muted);line-height:1.6}
+.section{margin-top:26px}
+h2{color:var(--warm);margin:0 0 8px;font-size:1.15rem}
+p.muted{color:var(--muted);line-height:1.6;font-size:1rem}
 .two-col{display:flex;gap:20px;align-items:flex-start}
 .col{flex:1}
-.side-photo{width:320px;height:220px;object-fit:cover;border-radius:10px}
+/* side photo: taller and preserve top */
+.side-photo{
+width:320px;
+height:240px;
+object-fit:cover;
+object-position:center top; /* avoid cutting head */
+border-radius:10px;
+box-shadow:0 8px 18px rgba(0,0,0,0.06);
+}
+/* gallery: use contain to avoid cutting heads; background fills */
 .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:12px}
-.gallery img{width:100%;height:160px;object-fit:cover;border-radius:10px}
-.ebook object{width:100%;height:420px;border-radius:10px;border:1px solid rgba(0,0,0,0.06);background:#fff}
-footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
-/* Privacy modal small link */
-.privacy-link{color:var(--muted);text-decoration:underline;cursor:pointer}
+.gallery .gimg{
+width:100%;
+height:160px;
+display:block;
+border-radius:10px;
+overflow:hidden;
+background:#f2f0ee;
+display:flex;
+align-items:center;
+justify-content:center;
+}
+.gallery .gimg img{
+max-width:100%;
+max-height:100%;
+object-fit:contain; /* prevent head cropping */
+display:block;
+}
+.ebook object{width:100%;height:460px;border-radius:10px;border:1px solid rgba(0,0,0,0.06);background:#fff}
+footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.95rem}
+/* Modal (privacy) */
+.modal-backdrop{position:fixed;inset:0;display:none;background:rgba(0,0,0,0.45);z-index:999}
+.modal{position:fixed;left:50%;top:50%;transform:translate(-50%, -50%);width:min(920px,94%);background:var(--card);border-radius:10px;padding:20px;box-shadow:0 20px 60px rgba(0,0,0,0.25);z-index:1000;display:none;max-height:80vh;overflow:auto}
+.modal h3{margin-top:0;color:var(--warm)}
+.modal .close{position:absolute;right:12px;top:8px;border:none;background:transparent;font-size:1.1rem;cursor:pointer;color:var(--muted)}
+/* minor helpers */
+.small-muted{color:var(--muted);font-size:0.95rem}
+/* adjust spacing a bit smaller than previous */
+.section{margin-top:20px}
 /* Responsive */
 @media (max-width:980px){
 .hero{grid-template-columns:1fr;gap:18px}
-.hero-photo{height:40vh}
+.hero-photo{height:38vh}
 .gallery{grid-template-columns:repeat(2,1fr)}
 .side-photo{width:100%;height:200px}
 .two-col{flex-direction:column}
@@ -53,17 +97,16 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
 </style>
 </head>
 <body>
+
 <div class="wrap">
 <div class="card">
 
-<!-- HERO (grande, metade da tela com imagem à direita) -->
+<!-- HERO -->
 <header class="hero" role="banner" aria-label="Apresentação do profissional">
 <div>
 <h1>Maycon Barboza</h1>
 <div class="lead">Psicólogo, Psicanalista e Educador Clínico — clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.</div>
-<div class="meta">
-<span style="font-weight:600;color:var(--muted)">CRP 01/21617</span> · Atendimento presencial e online · +14.000 atendimentos
-</div>
+<div class="meta"><strong>CRP 01/21617</strong> · Atendimento presencial e online · +14.000 atendimentos</div>
 <div class="badges" aria-hidden="true">
 <span class="badge">Psicanálise Clínica</span>
 <span class="badge">Hipnoterapia</span>
@@ -71,7 +114,7 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
 </div>
 </div>
 
-<!-- principal photo: tenta images/maycon-1.jpg, se não, tenta caminho local (upload no chat) -->
+<!-- HERO IMAGE (fallback automático, see script below) -->
 <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza — capa">
 </header>
 
@@ -92,7 +135,7 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
 </div>
 </section>
 
-<!-- Formação / Curso -->
+<!-- Formação -->
 <section class="section" id="formacao">
 <h2>Formação Livre em Psicanálise Clínica — Instituto LivreMent</h2>
 <p class="muted"><strong>Duração:</strong> 39 meses. Tripé: análise pessoal, supervisão e estudo teórico. Metodologia interativa e turmas reduzidas — foco em prática clínica e desenvolvimento profissional.</p>
@@ -113,14 +156,13 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
 <section class="section" id="galeria">
 <h2>Imagens</h2>
 <div class="gallery" aria-label="Galeria de fotos">
-<img id="g1" alt="Maycon foto 1" src="">
-<img id="g2" alt="Maycon foto 2" src="">
-<img id="g3" alt="Maycon foto 3" src="">
+<div class="gimg"><img id="g1" alt="Maycon foto 1" src=""></div>
+<div class="gimg"><img id="g2" alt="Maycon foto 2" src=""></div>
+<div class="gimg"><img id="g3" alt="Maycon foto 3" src=""></div>
 </div>
 </section>
 
-<!-- Aviso clínico -->
-<div class="section" style="font-size:13px;color:var(--muted)">
+<div class="section small-muted" style="margin-top:18px;">
 <strong>Aviso:</strong> Conteúdo informativo. A assistente Yara é ferramenta de apoio e não substitui avaliação clínica. Em caso de risco, contate serviços de emergência.
 </div>
 
@@ -128,29 +170,28 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
 
 <footer>
 <div style="margin-bottom:8px">
-<a class="privacy-link" href="#privacidade">Política de privacidade</a> · <span style="color:var(--muted)">Instagram: @terapeutamaycon</span>
+<a id="privacyOpen" class="small-muted" style="text-decoration:underline;cursor:pointer">Política de privacidade</a> · <span class="small-muted">Instagram: @terapeutamaycon</span>
 </div>
-<div style="color:var(--muted)">© 2025 · Curadoria e linguagem por Maycon Barboza</div>
+<div class="small-muted">© 2025 · Curadoria e linguagem por Maycon Barboza</div>
 </footer>
+</div>
 
-<!-- POLÍTICA DE PRIVACIDADE (SEÇÃO DEDICADA) -->
-<div id="privacidade" style="max-width:var(--maxw);margin:28px auto;padding:18px;">
-<div style="background:var(--card);border-radius:12px;padding:22px;box-shadow:0 10px 30px rgba(0,0,0,0.06);line-height:1.6">
-<h2 style="color:var(--warm);margin-top:0">Política de Privacidade</h2>
-<p class="muted">Este site respeita a sua privacidade. As informações fornecidas voluntariamente (nome, telefone, e-mail) são utilizadas exclusivamente para fins de contato, agendamento ou envio de informações solicitadas pelo usuário. Não vendemos ou compartilhamos seus dados com terceiros, exceto quando exigido por lei.</p>
-<h3 style="color:var(--warm);margin-bottom:6px">Cookies e tecnologias</h3>
+<!-- PRIVACY MODAL (hidden by default) -->
+<div id="modalBackdrop" class="modal-backdrop" aria-hidden="true"></div>
+<div id="privacyModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="privacyTitle">
+<button class="close" id="closeModal" aria-label="Fechar">✕</button>
+<h3 id="privacyTitle">Política de Privacidade</h3>
+<p class="muted"><strong>Este site respeita a sua privacidade.</strong> As informações fornecidas voluntariamente (nome, telefone, e-mail) são utilizadas exclusivamente para fins de contato, agendamento ou envio de informações solicitadas pelo usuário. Não vendemos ou compartilhamos seus dados com terceiros, exceto quando exigido por lei.</p>
+<h4 style="color:var(--warm)">Cookies e tecnologias</h4>
 <p class="muted">Podemos utilizar cookies estritamente necessários ao funcionamento do site. A Yara (assistente IBM Watson) pode processar dados em servidores de terceiros conforme as políticas da IBM.</p>
-<h3 style="color:var(--warm);margin-bottom:6px">Segurança</h3>
+<h4 style="color:var(--warm)">Segurança</h4>
 <p class="muted">Adotamos medidas técnicas razoáveis para proteger os dados. Entretanto, nenhum sistema é totalmente seguro — em caso de dúvida entre em contato.</p>
-<h3 style="color:var(--warm);margin-bottom:6px">Contato</h3>
+<h4 style="color:var(--warm)">Contato</h4>
 <p class="muted">Dúvidas sobre privacidade: entre em contato via WhatsApp ou e-mail informados no site.</p>
-<p style="color:var(--muted);margin-top:12px">Última atualização: 2025</p>
-</div>
-</div>
-
+<p class="muted" style="margin-top:12px">Última atualização: 2025</p>
 </div>
 
-<!-- WATSON ASSISTANT (YARA) -->
+<!-- WATSON (YARA) -->
 <script>
 window.watsonAssistantChatOptions = {
 integrationID: "6f4c306d-a746-496f-b2c1-0ecf69b69af3",
@@ -163,33 +204,35 @@ setTimeout(()=>{ try{ instance.openWindow(); }catch(e){} },2000);
 };
 setTimeout(function(){
 const t=document.createElement('script');
-t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/"
++ (window.watsonAssistantChatOptions.clientVersion || 'latest')
++ "/WatsonAssistantChatEntry.js";
 document.head.appendChild(t);
 });
 </script>
 
-<!-- Script resiliente: tenta paths /images/... e também os caminhos locais já presentes no chat -->
+<!-- Script: resilient image/pdf loading + modal logic -->
 <script>
-// candidatos — primeiro tenta imagens na pasta images/, depois raiz, depois caminhos locais (do chat)
+// ===== image candidates =====
 const heroCandidates = [
-'images/maycon-1.jpg', 'maycon-1.jpg',
+'images/maycon-1.jpg','maycon-1.jpg',
 '/mnt/data/FAE074C2-FA83-4DA6-847F-32BB45495631.jpeg'
 ];
 const sideCandidates = [
-'images/maycon-2.jpg', 'maycon-2.jpg',
+'images/maycon-2.jpg','maycon-2.jpg',
 '/mnt/data/EB8BEE95-2113-4781-8A20-A893C88EFD3B.jpeg'
 ];
 const galleryCandidates = [
-'images/maycon-3.jpg', 'maycon-3.jpg',
+'images/maycon-3.jpg','maycon-3.jpg',
 '/mnt/data/7D8D8CC6-7514-42AB-A9D0-69FEB373E401.jpeg'
 ];
 
-function tryLoad(imgEl, candidates){
+function tryLoad(imgEl, candidates, onFailHide = false){
 let i=0;
 function next(){
-if(i>=candidates.length){ imgEl.style.display='none'; return; }
+if(i>=candidates.length){ if(onFailHide) imgEl.style.display='none'; return; }
 const url=candidates[i++];
-const tester=new Image();
+const tester = new Image();
 tester.onload = ()=>{ imgEl.src = url; imgEl.style.display='block'; };
 tester.onerror = ()=>{ next(); };
 tester.src = url;
@@ -197,13 +240,14 @@ tester.src = url;
 next();
 }
 
+// set hero and side images
 tryLoad(document.getElementById('heroImg'), heroCandidates);
 tryLoad(document.getElementById('sideImg'), sideCandidates);
-tryLoad(document.getElementById('g1'), galleryCandidates);
-tryLoad(document.getElementById('g2'), sideCandidates);
-tryLoad(document.getElementById('g3'), heroCandidates);
+tryLoad(document.getElementById('g1'), galleryCandidates, true);
+tryLoad(document.getElementById('g2'), sideCandidates, true);
+tryLoad(document.getElementById('g3'), heroCandidates, true);
 
-// PDF check: tenta pdf/ebook.pdf, pdf at root (ebook.pdf) e fallback
+// PDF fallback: tries pdf/ebook.pdf then ebook.pdf
 (async function checkPdf(){
 const candidates = ['pdf/ebook.pdf','ebook.pdf'];
 for(const p of candidates){
@@ -216,14 +260,39 @@ const link = document.getElementById('ebookLink');
 if(link) link.href = p;
 return;
 }
-}catch(e){
-// ignore and try next
-}
+}catch(e){}
 }
 console.warn('PDF não encontrado nos caminhos tentados.');
 })();
+
+// Modal logic for privacy
+const modal = document.getElementById('privacyModal');
+const backdrop = document.getElementById('modalBackdrop');
+const open = document.getElementById('privacyOpen');
+const close = document.getElementById('closeModal');
+
+function showModal(){
+backdrop.style.display='block';
+modal.style.display='block';
+backdrop.setAttribute('aria-hidden','false');
+modal.setAttribute('aria-hidden','false');
+// trap focus? minimal approach: focus close button
+close.focus();
+}
+function hideModal(){
+backdrop.style.display='none';
+modal.style.display='none';
+backdrop.setAttribute('aria-hidden','true');
+modal.setAttribute('aria-hidden','true');
+}
+open.addEventListener('click', showModal);
+close.addEventListener('click', hideModal);
+backdrop.addEventListener('click', hideModal);
+document.addEventListener('keydown', function(e){
+if(e.key === 'Escape'){ hideModal(); }
+});
 </script>
+
 </body>
 </html>
-
 
