--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
-<meta name="description" content="Maycon Barboza — atendimento clínico desde 2016. Formação em psicanálise clínica.">
+<meta name="description" content="Maycon Barboza. Atendimento clínico desde 2016. Formação em psicanálise clínica.">
 <style>
 /* =========================
 Paleta e tipografia (estilo B)
@@ -295,4 +295,5 @@ if(e.key === 'Escape'){ hideModal(); }
 
 </body>
 </html>
+
 
