--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
+<title>Maycon Barboza. Psicólogo, Psicanalista & Educador</title>
 <meta name="description" content="Maycon Barboza. Atendimento clínico desde 2016. Formação em psicanálise clínica.">
 <style>
 /* =========================
@@ -295,5 +295,6 @@ if(e.key === 'Escape'){ hideModal(); }
 
 </body>
 </html>
+
 
 
