--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.95rem}
 <header class="hero" role="banner" aria-label="Apresentação do profissional">
 <div>
 <h1>Maycon Barboza</h1>
-<div class="lead">Psicólogo, Psicanalista e Educador Clínico — clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.</div>
+<div class="lead">Psicólogo, Psicanalista e Educador Clínico. Clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.</div>
 <div class="meta"><strong>CRP 01/21617</strong> · Atendimento presencial e online · +14.000 atendimentos</div>
 <div class="badges" aria-hidden="true">
 <span class="badge">Psicanálise Clínica</span>
@@ -295,6 +295,7 @@ if(e.key === 'Escape'){ hideModal(); }
 
 </body>
 </html>
+
 
 
 
