--- a/index.html
+++ b/index.html
@@ -3,101 +3,83 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Maycon Barboza. Psicólogo, Psicanalista & Educador</title>
-<meta name="description" content="Maycon Barboza. Atendimento clínico desde 2016. Formação em psicanálise clínica.">
+<title>Maycon Barboza — Psicólogo, Psicanalista & Educador</title>
+<meta name="description" content="Maycon Barboza — atendimento clínico desde 2016. Formação em psicanálise clínica.">
 <style>
-/* =========================
-Paleta e tipografia (estilo B)
-========================= */
+/* -------------------------
+Estética ajustada (azul,
+tipografia maior, fotos não cortam)
+------------------------- */
 :root{
---bg:#f6f2ec; /* creme claro */
+--bg:#f6f2ec; /* creme suave */
 --card:#ffffff;
---warm:#6b3a3a; /* marrom acastanhado */
---muted:#6a6058;
---accent:#9b6f5a;
+--primary:#1F5B7A; /* azul clínico elegante (ajustável) */
+--muted:#4b4b48; /* texto */
+--accent:#2A7EA8; /* destaque leve */
 --radius:12px;
---maxw:1100px;
+--maxw:1120px;
 --serif: "Georgia", "Times New Roman", serif;
 }
 *{box-sizing:border-box}
-html { font-size:18px; } /* AUMENTEI A BASE DA LETRA */
-body{margin:0;background:var(--bg);color:#222;font-family:var(--serif);-webkit-font-smoothing:antialiased;line-height:1.6}
-.wrap{max-width:var(--maxw);margin:22px auto;padding:18px}
+html{font-size:19px} /* base maior conforme solicitado */
+body{margin:0;background:var(--bg);color:var(--muted);font-family:var(--serif);-webkit-font-smoothing:antialiased;line-height:1.62}
+.wrap{max-width:var(--maxw);margin:20px auto;padding:20px}
 .card{background:var(--card);border-radius:calc(var(--radius));padding:26px;box-shadow:0 10px 30px rgba(0,0,0,0.06)}
-/* HERO: grid 2 col (texto|imagem) */
+/* HERO layout */
 .hero{display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center}
-.hero h1{margin:0;font-size:2.0rem;color:var(--warm);letter-spacing:0.2px}
-.hero .lead{margin-top:10px;color:var(--muted);font-size:1rem}
-.hero .meta{margin-top:12px;color:var(--muted);font-size:0.95rem}
-.hero .badges{margin-top:14px}
-.badge{display:inline-block;padding:8px 12px;border-radius:999px;background:#f8f7f5;border:1px solid rgba(0,0,0,0.03);color:var(--warm);font-weight:600;margin-right:8px;font-size:0.95rem}
-/* IMAGE STYLES — designed to avoid cutting heads */
+.hero h1{margin:0;font-size:2.1rem;color:var(--primary);letter-spacing:0.2px}
+.lead{margin-top:10px;color:var(--muted);font-size:1.02rem}
+.meta{margin-top:12px;color:var(--muted);font-size:0.98rem}
+.badges{margin-top:14px}
+.badge{display:inline-block;padding:8px 12px;border-radius:999px;background:rgba(42,126,168,0.08);color:var(--primary);font-weight:700;margin-right:8px;border:1px solid rgba(42,126,168,0.12);font-size:0.95rem}
+/* HERO image (keeps head visible) */
 .hero-photo{
 width:100%;
-height:62vh; /* generous hero height so head is visible */
+height:60vh;
 max-height:640px;
 border-radius:12px;
-object-fit:cover; /* fills box */
-object-position:center top; /* keep top of image visible (head) */
+object-fit:cover;
+object-position:center top; /* keep head visible */
 box-shadow:0 12px 30px rgba(0,0,0,0.08);
 }
 /* Sections */
-.section{margin-top:26px}
-h2{color:var(--warm);margin:0 0 8px;font-size:1.15rem}
+.section{margin-top:22px}
+h2{color:var(--primary);margin:0 0 8px;font-size:1.12rem}
 p.muted{color:var(--muted);line-height:1.6;font-size:1rem}
 .two-col{display:flex;gap:20px;align-items:flex-start}
 .col{flex:1}
-/* side photo: taller and preserve top */
+/* side photo: tall, but prefer not to cut faces */
 .side-photo{
 width:320px;
-height:240px;
+height:260px;
 object-fit:cover;
-object-position:center top; /* avoid cutting head */
+object-position:center top;
 border-radius:10px;
 box-shadow:0 8px 18px rgba(0,0,0,0.06);
 }
-/* gallery: use contain to avoid cutting heads; background fills */
+/* gallery: use contain for photo 3 to avoid cutting the head */
 .gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:12px}
-.gallery .gimg{
-width:100%;
-height:160px;
-display:block;
-border-radius:10px;
-overflow:hidden;
-background:#f2f0ee;
-display:flex;
-align-items:center;
-justify-content:center;
-}
-.gallery .gimg img{
-max-width:100%;
-max-height:100%;
-object-fit:contain; /* prevent head cropping */
-display:block;
-}
-.ebook object{width:100%;height:460px;border-radius:10px;border:1px solid rgba(0,0,0,0.06);background:#fff}
+.gimg{width:100%;height:160px;border-radius:10px;overflow:hidden;background:#f2f0ee;display:flex;align-items:center;justify-content:center}
+.gimg img{max-width:100%;max-height:100%;object-fit:contain;display:block}
+.ebook object{width:100%;height:480px;border-radius:10px;border:1px solid rgba(0,0,0,0.06);background:#fff}
 footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.95rem}
-/* Modal (privacy) */
-.modal-backdrop{position:fixed;inset:0;display:none;background:rgba(0,0,0,0.45);z-index:999}
-.modal{position:fixed;left:50%;top:50%;transform:translate(-50%, -50%);width:min(920px,94%);background:var(--card);border-radius:10px;padding:20px;box-shadow:0 20px 60px rgba(0,0,0,0.25);z-index:1000;display:none;max-height:80vh;overflow:auto}
-.modal h3{margin-top:0;color:var(--warm)}
-.modal .close{position:absolute;right:12px;top:8px;border:none;background:transparent;font-size:1.1rem;cursor:pointer;color:var(--muted)}
-/* minor helpers */
 .small-muted{color:var(--muted);font-size:0.95rem}
-/* adjust spacing a bit smaller than previous */
-.section{margin-top:20px}
-/* Responsive */
+/* modal privacy */
+.modal-backdrop{position:fixed;inset:0;display:none;background:rgba(0,0,0,0.45);z-index:999}
+.modal{position:fixed;left:50%;top:50%;transform:translate(-50%,-50%);width:min(920px,94%);background:var(--card);border-radius:10px;padding:20px;box-shadow:0 20px 60px rgba(0,0,0,0.25);z-index:1000;display:none;max-height:80vh;overflow:auto}
+.modal h3{margin-top:0;color:var(--primary)}
+.modal .close{position:absolute;right:12px;top:8px;border:none;background:transparent;font-size:1.1rem;cursor:pointer;color:var(--muted)}
+/* responsive tweaks */
 @media (max-width:980px){
 .hero{grid-template-columns:1fr;gap:18px}
-.hero-photo{height:38vh}
-.gallery{grid-template-columns:repeat(2,1fr)}
+.hero-photo{height:40vh}
 .side-photo{width:100%;height:200px}
+.gallery{grid-template-columns:repeat(2,1fr)}
 .two-col{flex-direction:column}
 }
 </style>
 </head>
 <body>
-
 <div class="wrap">
 <div class="card">
 
@@ -105,8 +87,7 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.95rem}
 <header class="hero" role="banner" aria-label="Apresentação do profissional">
 <div>
 <h1>Maycon Barboza</h1>
-<div class="lead">Psicólogo, Psicanalista e Educador Clínico. 
-  Clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.</div>
+<div class="lead">Psicólogo, Psicanalista e Educador Clínico — clínica integrativa com foco em vínculos, transtornos de humor e sexualidade.</div>
 <div class="meta"><strong>CRP 01/21617</strong> · Atendimento presencial e online · +14.000 atendimentos</div>
 <div class="badges" aria-hidden="true">
 <span class="badge">Psicanálise Clínica</span>
@@ -115,7 +96,7 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.95rem}
 </div>
 </div>
 
-<!-- HERO IMAGE (fallback automático, see script below) -->
+<!-- hero image (fallback tries images/... or root) -->
 <img id="heroImg" class="hero-photo" src="" alt="Foto de Maycon Barboza — capa">
 </header>
 
@@ -177,17 +158,17 @@ footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.95rem}
 </footer>
 </div>
 
-<!-- PRIVACY MODAL (hidden by default) -->
+<!-- PRIVACY MODAL -->
 <div id="modalBackdrop" class="modal-backdrop" aria-hidden="true"></div>
 <div id="privacyModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="privacyTitle">
 <button class="close" id="closeModal" aria-label="Fechar">✕</button>
 <h3 id="privacyTitle">Política de Privacidade</h3>
 <p class="muted"><strong>Este site respeita a sua privacidade.</strong> As informações fornecidas voluntariamente (nome, telefone, e-mail) são utilizadas exclusivamente para fins de contato, agendamento ou envio de informações solicitadas pelo usuário. Não vendemos ou compartilhamos seus dados com terceiros, exceto quando exigido por lei.</p>
-<h4 style="color:var(--warm)">Cookies e tecnologias</h4>
+<h4 style="color:var(--primary)">Cookies e tecnologias</h4>
 <p class="muted">Podemos utilizar cookies estritamente necessários ao funcionamento do site. A Yara (assistente IBM Watson) pode processar dados em servidores de terceiros conforme as políticas da IBM.</p>
-<h4 style="color:var(--warm)">Segurança</h4>
+<h4 style="color:var(--primary)">Segurança</h4>
 <p class="muted">Adotamos medidas técnicas razoáveis para proteger os dados. Entretanto, nenhum sistema é totalmente seguro — em caso de dúvida entre em contato.</p>
-<h4 style="color:var(--warm)">Contato</h4>
+<h4 style="color:var(--primary)">Contato</h4>
 <p class="muted">Dúvidas sobre privacidade: entre em contato via WhatsApp ou e-mail informados no site.</p>
 <p class="muted" style="margin-top:12px">Última atualização: 2025</p>
 </div>
@@ -212,43 +193,36 @@ document.head.appendChild(t);
 });
 </script>
 
-<!-- Script: resilient image/pdf loading + modal logic -->
+<!-- Script: image/pdf resilient loading + modal logic + fine-tune for photo 3 -->
 <script>
-// ===== image candidates =====
-const heroCandidates = [
-'images/maycon-1.jpg','maycon-1.jpg',
-'/mnt/data/FAE074C2-FA83-4DA6-847F-32BB45495631.jpeg'
-];
-const sideCandidates = [
-'images/maycon-2.jpg','maycon-2.jpg',
-'/mnt/data/EB8BEE95-2113-4781-8A20-A893C88EFD3B.jpeg'
-];
-const galleryCandidates = [
-'images/maycon-3.jpg','maycon-3.jpg',
-'/mnt/data/7D8D8CC6-7514-42AB-A9D0-69FEB373E401.jpeg'
-];
+// candidates: images/ first, then root, then internal paths used here
+const heroCandidates = ['images/maycon-1.jpg','maycon-1.jpg','/mnt/data/FAE074C2-FA83-4DA6-847F-32BB45495631.jpeg'];
+const sideCandidates = ['images/maycon-2.jpg','maycon-2.jpg','/mnt/data/EB8BEE95-2113-4781-8A20-A893C88EFD3B.jpeg'];
+const galleryCandidates = ['images/maycon-3.jpg','maycon-3.jpg','/mnt/data/7D8D8CC6-7514-42AB-A9D0-69FEB373E401.jpeg'];
 
-function tryLoad(imgEl, candidates, onFailHide = false){
+function tryLoad(imgEl, candidates, finalStyle){
 let i=0;
 function next(){
-if(i>=candidates.length){ if(onFailHide) imgEl.style.display='none'; return; }
+if(i>=candidates.length){ if(imgEl) imgEl.style.display='none'; return; }
 const url=candidates[i++];
 const tester = new Image();
-tester.onload = ()=>{ imgEl.src = url; imgEl.style.display='block'; };
+tester.onload = ()=>{ if(imgEl){ imgEl.src = url; if(finalStyle) Object.assign(imgEl.style, finalStyle); imgEl.style.display='block'; } };
 tester.onerror = ()=>{ next(); };
 tester.src = url;
 }
 next();
 }
 
-// set hero and side images
-tryLoad(document.getElementById('heroImg'), heroCandidates);
-tryLoad(document.getElementById('sideImg'), sideCandidates);
-tryLoad(document.getElementById('g1'), galleryCandidates, true);
-tryLoad(document.getElementById('g2'), sideCandidates, true);
-tryLoad(document.getElementById('g3'), heroCandidates, true);
+// load hero and side images
+tryLoad(document.getElementById('heroImg'), heroCandidates, {'objectPosition':'center top'});
+tryLoad(document.getElementById('sideImg'), sideCandidates, {'objectPosition':'center top'});
 
-// PDF fallback: tries pdf/ebook.pdf then ebook.pdf
+// gallery images: to avoid cutting head on photo 3, use contain for all gallery imgs
+tryLoad(document.getElementById('g1'), galleryCandidates, {'objectFit':'contain'});
+tryLoad(document.getElementById('g2'), sideCandidates, {'objectFit':'contain'});
+tryLoad(document.getElementById('g3'), heroCandidates, {'objectFit':'contain'});
+
+// PDF fallback
 (async function checkPdf(){
 const candidates = ['pdf/ebook.pdf','ebook.pdf'];
 for(const p of candidates){
@@ -263,10 +237,10 @@ return;
 }
 }catch(e){}
 }
-console.warn('PDF não encontrado nos caminhos tentados.');
+console.warn('PDF não encontrado.');
 })();
 
-// Modal logic for privacy
+// modal logic
 const modal = document.getElementById('privacyModal');
 const backdrop = document.getElementById('modalBackdrop');
 const open = document.getElementById('privacyOpen');
@@ -277,7 +251,6 @@ backdrop.style.display='block';
 modal.style.display='block';
 backdrop.setAttribute('aria-hidden','false');
 modal.setAttribute('aria-hidden','false');
-// trap focus? minimal approach: focus close button
 close.focus();
 }
 function hideModal(){
@@ -289,15 +262,7 @@ modal.setAttribute('aria-hidden','true');
 open.addEventListener('click', showModal);
 close.addEventListener('click', hideModal);
 backdrop.addEventListener('click', hideModal);
-document.addEventListener('keydown', function(e){
-if(e.key === 'Escape'){ hideModal(); }
-});
+document.addEventListener('keydown', function(e){ if(e.key==='Escape'){ hideModal(); } });
 </script>
-
 </body>
 </html>
-
-
-
-
-
